--- a/src/pages/learning-status/style/index.module.less
+++ b/src/pages/learning-status/style/index.module.less
@@ -19,8 +19,6 @@
 
 .search-form-wrapper {
   display: flex;
-  border-bottom: 1px solid var(--color-border-1);
-  margin-bottom: 20px;
 
   .right-button {
     display: flex;
@@ -31,6 +29,13 @@
     border-left: 1px solid var(--color-border-2);
     box-sizing: border-box;
   }
+}
+
+.search-form-btn-wrapper {
+  display: flex;
+  border-bottom: 1px solid var(--color-border-1);
+  margin-bottom: 20px;
+  margin-top: -5px;
 }
 
 .button-group {
