hover text color

--- a/src/style/global.less
+++ b/src/style/global.less
@@ -42,3 +42,11 @@ body[arco-theme='dark'] {
 .ql-editor {
   min-height: 300px !important;
 }
+
+.hover-text:hover {
+  color: rgb(var(--primary-8));
+}
+
+.hover-text {
+  transition: 0.15s;
+}
