electron drag window

--- a/src/pages/login/style/index.module.less
+++ b/src/pages/login/style/index.module.less
@@ -122,3 +122,9 @@
 .hide {
   display: none;
 }
+
+.header {
+  height: 35px;
+  -webkit-app-region: drag;
+  border-bottom: 1px solid var(--color-border-1);
+}
