--- a/src/pages/dashboard/style/overview.module.less
+++ b/src/pages/dashboard/style/overview.module.less
@@ -53,12 +53,13 @@
 .ctw {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 16px;
+  margin-bottom: 30px;
 }
 
 .chart-title {
   font-size: 16px;
-  font-weight: 500;
+  // font-weight: 500;
+  color: rgb(var(--primary-6));
 }
 
 .chart-sub-title {
