--- a/src/components/NavBar/style/index.module.less
+++ b/src/components/NavBar/style/index.module.less
@@ -18,7 +18,7 @@
   align-items: center;
   width: 300px;
   height: 100%;
-  padding-left: 0px;
+  padding-left: 0;
   padding-top: 5px;
   box-sizing: border-box;
 }
