--- a/src/components/NavBar/style/index.module.less
+++ b/src/components/NavBar/style/index.module.less
@@ -30,9 +30,9 @@
 }
 
 .logo-name {
-  -webkit-user-select: none; /* Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Safari */
+  user-select: none; /* Firefox */
+  user-select: none; /* IE10+/Edge */
   user-select: none; /* Standard */
   color: rgb(var(--primary-8));
   font-weight: 500;
